--- a/segundotri/index.html
+++ b/segundotri/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-        Meu site da escola
+        <h1> Meu site da escola </h1>
+        <p> Tudo sobre </p>
+
     </header>
 </body>
 </html>
